--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,8 +12,6 @@ layout: default
   <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
-
   {% include disqus.html %}
+  {% include mathjax.html %}
 </article>
-
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript" ></script>
