--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+mathjax: true
 ---
 
 <article class="page">
@@ -8,6 +9,5 @@ layout: default
 
   <div class="entry">
     {{ content }}
-    {% include mathjax.html %}
   </div>
 </article>
